--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,21 +4,19 @@
       <div class="card">
         <div class="header">
           <h4 class="title">Menu</h4>
-            <p class="category">Configuração de menu</p>
+          <p class="category">Configuração de menu</p>
         </div>
 
         <div class="content">
-          <div class="row">
-            <div class="col-md-6">
 
-              <p> Conteúdo aqui</p>
-              <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
-              
-              
-
-            </div>
+          <label>Portal</label>
+          <select class="browser-default">
+                <option value="" disabled selected>Selecione um portal</option>
+                <option value="1">Portal 1</option>
+                <option value="2">Portal 2</option>
+                <option value="3">Portal 3</option>
+              </select>
           </div>
-        </div>
 
       </div>
     </div>
